# DUCO-Android-Miner

./: LICENSE  PRIVACY-POLICY.md  README.md  TERMS-AND-CONDITIONS.md
DuinoCoinMiner/: settings.gradle
DuinoCoinMiner/app/: build.gradle
DuinoCoinMiner/app/src/androidTest/java/com/fatorius/duinocoinminer/: ExampleInstrumentedTest.java
DuinoCoinMiner/app/src/main/: AndroidManifest.xml
DuinoCoinMiner/app/src/main/cpp/: CMakeLists.txt  ducohasher.cpp  sha1.h
DuinoCoinMiner/app/src/main/cpp/hasher/: ducohasher.cpp  sha1.h
DuinoCoinMiner/app/src/main/cpp/utils/: cpuinfo.cpp
DuinoCoinMiner/app/src/main/java/com/fatorius/duinocoinminer/: InsertDataActivity.java  MainActivity.java  MiningActivity.java
DuinoCoinMiner/app/src/main/java/com/fatorius/duinocoinminer/activities/: InsertDataActivity.java  MainActivity.java  MiningActivity.java  ServiceNotificationActivity.java  WarningActivity.java
DuinoCoinMiner/app/src/main/java/com/fatorius/duinocoinminer/algorithms/: DUCOS1Hasher.java
DuinoCoinMiner/app/src/main/java/com/fatorius/duinocoinminer/infos/: HardwareStats.java  MinerInfo.java
DuinoCoinMiner/app/src/main/java/com/fatorius/duinocoinminer/tcp/: Client.java  (+2 more)
DuinoCoinMiner/app/src/main/res/layout/: activity_main.xml  activity_mining.xml  activity_warning.xml  insert_data.xml
DuinoCoinMiner/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
DuinoCoinMiner/app/src/main/res/values-night/: themes.xml
DuinoCoinMiner/app/src/test/java/com/fatorius/duinocoinminer/: ExampleUnitTest.java
DuinoCoinMiner/gradle/wrapper/: gradle-wrapper.properties
(+4 files in other folders)
